--- a/src/css/vars.css
+++ b/src/css/vars.css
@@ -224,7 +224,7 @@
   --z-index-nav: 1;
   --z-index-toolbar: 2;
   --z-index-page-version-menu: 3;
-  --z-index-navbar: 4;
+  --z-index-navbar: 100;
 }
 
 /* RESPONSIVE OVERRIDES */
